--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.0",
+    "react-icons": "^5.0.1",
+    "react-responsive": "^9.0.2",
     "react-router-dom": "^6.22.2",
     "uuid": "^9.0.1"
   },
